[gd_scene load_steps=9 format=3 uid="uid://clqmpxaijkks3"]

[ext_resource type="Script" path="res://Scripts/start_cutscene.gd" id="1_osiyd"]
[ext_resource type="Texture2D" uid="uid://or1wa6h2rnqp" path="res://Sprites/startCutscene.png" id="1_to2vb"]
[ext_resource type="FontFile" uid="uid://cmibcc20prfro" path="res://font/PressStart2P-Regular.ttf" id="2_wsqhs"]
[ext_resource type="AudioStream" uid="uid://bpi6xcfifjio" path="res://Sounds/blip.wav" id="4_ydmcj"]
[ext_resource type="AudioStream" uid="uid://hbtap2dit4vw" path="res://Music/cutscene.wav" id="5_qklbu"]

[sub_resource type="Animation" id="Animation_0rg81"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialouge:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Son, there isn't much
time left, you must leave
the plains at once."]
}

[sub_resource type="Animation" id="Animation_mticb"]
resource_name = "Start"
length = 39.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialouge:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6, 12, 18, 24, 30, 35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["Son, there isn't much
time left, you must leave
the plains at once.", "I, however, can not come
with you. I've become to old
to acompany you.", "The shield I've just given
you will protect you on your
journey.", "Oh... and here are a few more
things that you should keep
in mind.", "Use WASD to move, press L
to jump, press K to dash,
and press H to pause.", "Remember that you can
hit enemies while dashing
with your shield.", "That should be everything.
Good luck, my son."]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o02tt"]
_data = {
"RESET": SubResource("Animation_0rg81"),
"Start": SubResource("Animation_mticb")
}

[node name="StartCutscene" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_osiyd")

[node name="StartCutscene" type="Sprite2D" parent="."]
position = Vector2(128, 120)
texture = ExtResource("1_to2vb")

[node name="Dialouge" type="Label" parent="."]
layout_mode = 0
offset_top = 182.0
offset_right = 512.0
offset_bottom = 298.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_wsqhs")
text = "Son, there isn't much
time left, you must leave
the plains at once."
horizontal_alignment = 1

[node name="Helper" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 231.0
offset_right = 242.0
offset_bottom = 249.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_wsqhs")
text = "Press H to Skip"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o02tt")
}

[node name="Transition" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 256.0
offset_bottom = 240.0
color = Color(0, 0, 0, 1)

[node name="TransitionTimer" type="Timer" parent="."]
wait_time = 1.2

[node name="BlipSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ydmcj")
volume_db = 15.0

[node name="CutsceneMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qklbu")
volume_db = 12.0
autoplay = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="TransitionTimer" to="." method="_on_transition_timer_timeout"]
[connection signal="finished" from="CutsceneMusic" to="." method="_on_cutscene_music_finished"]
